Loading animation added, Right and Left panels separated (now they have different scrollbars), NavBar cleanup, Fixed navbar height problem when window width is less than 850 by hiding search field - Fixed requesting multiple pages when there is still one request processing, Fixed back button when it use history object of browser for doing its job, Fixed some forms not treated as ajax form, Fixed cross-panel refresh request, mCustomScrollbar added, Some minor css, javascript and html cleanups

--- a/css/theme.css
+++ b/css/theme.css
@@ -1,7 +1,20 @@
+body {
+    padding-top: 60px;
+}
+
+#mainContainer {
+    overflow: hidden;
+}
+
+.sidebar-nav {
+    padding: 9px 0;
+}
+
 .container-full {
     margin: 0 auto;
     width: 100%;
 }
+
 .ui_icons_table {
     display: inline-block;
     list-style: none outside none;
@@ -9,93 +22,157 @@
     padding: 0;
     text-align: center;
 }
-.ui_icons_table li {
-    background-color: #F9F9F9;
-    background-image: linear-gradient(to bottom, #FAFAFA 0%, #EDEDED 100%);
-    background-repeat: repeat-x;
-    border: 1px solid #D9D9D9;
-    border-radius: 4px 4px 4px 4px;
-    box-shadow: 0 1px 0 0 #FFFFFF inset, 0 1px 0 rgba(255, 255, 255, 0.4);
-    display: inline-block;
-    line-height: 14px;
-    margin: 0 10px 10px;
-    padding: 0 10px;
-    vertical-align: middle;
-}
-.ui_icons_table li {
-    width: 120px;
-    min-height: 120px;
-}
-.ui_icons_table li a {
-    padding: 5px 5px 5px 5px;
-}
-.ui_icons_table li:hover {
-    background-color: #FDFDFD;
-    background-image: linear-gradient(to bottom, #FDFDFD 0%, #F5F5F5 100%);
-    background-repeat: repeat-x;
-}
-.ui_icons_table li {
-    padding: 0;
-}
-.ui_icons_table li a {
-    color: #666666;
-    text-align: center !important;
-    text-shadow: 0 1px 0 #FFFFFF;
-}
-.ui_icons_table li:active {
-    background-image: linear-gradient(to bottom, #EEEEEE 0%, #F4F4F4 100%);
-    background-repeat: repeat-x;
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2) inset, 0 1px 0 rgba(255, 255, 255, 0.4);
-}
+
+    .ui_icons_table li {
+        background-color: #F9F9F9;
+        background-image: linear-gradient(to bottom, #FAFAFA 0%, #EDEDED 100%);
+        background-repeat: repeat-x;
+        border: 1px solid #D9D9D9;
+        border-radius: 4px 4px 4px 4px;
+        box-shadow: 0 1px 0 0 #FFFFFF inset, 0 1px 0 rgba(255, 255, 255, 0.4);
+        display: inline-block;
+        line-height: 14px;
+        margin: 0 10px 10px;
+        padding: 0 10px;
+        vertical-align: middle;
+    }
+
+    .ui_icons_table li {
+        width: 120px;
+        min-height: 120px;
+    }
+
+        .ui_icons_table li a {
+            padding: 5px 5px 5px 5px;
+        }
+
+        .ui_icons_table li:hover {
+            background-color: #FDFDFD;
+            background-image: linear-gradient(to bottom, #FDFDFD 0%, #F5F5F5 100%);
+            background-repeat: repeat-x;
+        }
+
+    .ui_icons_table li {
+        padding: 0;
+    }
+
+        .ui_icons_table li a {
+            color: #666666;
+            text-align: center !important;
+            text-shadow: 0 1px 0 #FFFFFF;
+        }
+
+        .ui_icons_table li:active {
+            background-image: linear-gradient(to bottom, #EEEEEE 0%, #F4F4F4 100%);
+            background-repeat: repeat-x;
+            box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2) inset, 0 1px 0 rgba(255, 255, 255, 0.4);
+        }
 
 footer {
-  color: #777777;
-  padding-bottom: 30px;
-  padding-top: 40px;
-  text-align: center;
+    color: #777777;
+    text-align: center;
 }
 
 .loading {
     background: url("../images/loading.gif") no-repeat scroll center 100px #1A1A1A;
-    border-radius: 8px;
+    border-radius: 4px;
     height: 100%;
-    margin: 0 0 0 -7px;
-    opacity: 0.6;
+    opacity: 0.3;
     position: absolute;
-    width: 100%;
+    width: 99.5%;
     display: none;
-    z-index: 9999;
-    min-height: 260px;
+    z-index: 1000;
     top: 0;
     right: 0;
 }
 
-#right{
+#rightContent {
     padding-top: 9px;
 }
 
-.navbar-form.navbar-left.pull-right {
-  margin-bottom: 0;
-  margin-top: 6px;
+#leftSide .loading {
+    right: auto;
+    left: 0;
+}
+
+#navSearch form {
+    margin-bottom: 0;
+    margin-top: 6px;
 }
 
 .domainmenu .goArrow {
-  display: none;
+    display: none;
 }
 
 .btn {
     margin: 3px;
 }
 
-#left .leftlink {
-  margin: 4px 7px;
+#leftContent .leftlink {
+    margin: 4px 7px;
 }
 
 .linkwithicon > img {
-  float: left;
-  margin: 6px 0 0 10px;
+    float: left;
+    margin: 6px 0 0 10px;
 }
 
 .aftericon.leftlink {
-  float: left;
+    float: left;
+}
+
+#rightContent, #leftContent {
+    min-height: 260px;
+}
+
+.innerScroll {
+    overflow: auto !important;
+}
+
+.domainmenu select {
+    width: 100% !important;
+}
+
+#rightNav {
+    float: right;
+}
+
+    #rightNav .hiddenTitle {
+        display: none;
+    }
+
+    #rightNav .hiddenTitle, #rightNav .visibleTitle {
+        margin-left: 3px;
+    }
+
+
+@media (max-width: 992px) {
+    .innerScroll {
+        min-height: 260px;
+        max-height: 99999px !important;
+    }
+
+    .loading {
+        width: 100%;
+    }
+
+    #mainContainer > div {
+        margin: 3px 0;
+    }
+}
+
+@media (max-width: 850px) {
+    #navSearch {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    #rightNav {
+        float: left;
+    }
+
+        #rightNav .hiddenTitle {
+            display: inline-block;
+        }
 }
